<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    android:padding="16dp"
    tools:context=".EscuelaFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/logoUns"
        android:layout_width="219dp"
        android:layout_height="101dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/logo_uns"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTituloEscuela"
        android:layout_width="273dp"
        android:layout_height="62dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif"
        android:text="@string/titulo_escuela"
        android:textColor="?attr/colorOnSurface"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoUns" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTituloMision"
        android:layout_width="62dp"
        android:layout_height="30dp"
        android:layout_marginTop="12dp"
        android:text="@string/titulo_mision"
        android:textColor="@color/primaryColor"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTituloEscuela" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvMision"
        android:layout_width="279dp"
        android:layout_height="88dp"
        android:layout_marginTop="4dp"
        android:justificationMode="inter_word"
        android:text="@string/detalle_mision"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTituloMision" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTituloVision"
        android:layout_width="102dp"
        android:layout_height="25dp"
        android:layout_marginTop="4dp"
        android:text="@string/titulo_vision"
        android:textColor="@color/primaryColor"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMision" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvVision"
        android:layout_width="284dp"
        android:layout_height="77dp"
        android:layout_marginTop="4dp"
        android:justificationMode="inter_word"
        android:text="@string/detalle_vision"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTituloVision" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTituloDescripcion"
        android:layout_width="114dp"
        android:layout_height="27dp"
        android:layout_marginTop="16dp"
        android:text="@string/titulo_descripcion"
        android:textColor="@color/primaryColor"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvVision" />

    <ImageView
        android:id="@+id/viewDirectorImage"
        android:layout_width="298dp"
        android:layout_height="90dp"
        android:layout_marginTop="16dp"
        android:scaleType="centerCrop"
        android:src="@drawable/escuela_sist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTituloDescripcion" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvDescripcion"
        android:layout_width="348dp"
        android:layout_height="98dp"
        android:layout_marginTop="16dp"
        android:justificationMode="inter_word"
        android:text="@string/detalle_descripcion"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewDirectorImage" />
</androidx.constraintlayout.widget.ConstraintLayout>
